# differential-geometry

./: .project  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
diffgeom/: index.html  sidebar-items.js
diffgeom/coordinates/: index.html  sidebar-items.js  struct.Point.html  trait.ConversionTo.html  trait.CoordinateSystem.html
diffgeom/metric/: index.html  sidebar-items.js  trait.MetricSystem.html
diffgeom/tensors/: enum.IndexType.html  index.html  sidebar-items.js  struct.ContravariantIndex.html  struct.CovariantIndex.html  struct.Tensor.html  trait.Concat.html  trait.Contract.html  trait.InnerProduct.html  trait.OtherIndex.html  trait.TensorIndex.html  trait.Variance.html  type.Contracted.html  type.Covector.html  type.InvTwoForm.html  type.Joined.html  type.Matrix.html  type.TwoForm.html  type.Vector.html
generic_array/: index.html  macro.arr!.html  macro.arr_impl!.html  struct.GenericArray.html  struct.GenericArrayImplEven.html  struct.GenericArrayImplOdd.html  trait.ArrayLength.html
generic_array/arr/: index.html  trait.AddLength.html  type.Inc.html
src/: coordinates.rs  lib.rs  macros.rs  metric.rs  tensors.rs  tests.rs
src/diffgeom/: coordinates.rs.html  lib.rs.html  metric.rs.html
src/generic_array/: arr.rs.html  lib.rs.html
src/tensors/: mod.rs  tensor.rs  variance.rs  vector.rs
src/tests/: basic.rs  coord_transform.rs  mod.rs
src/typenum/: bit.rs.html  consts.rs.html  int.rs.html  lib.rs.html  marker_traits.rs.html  operator_aliases.rs.html  (+2 more)
typenum/: enum.Equal.html  enum.Greater.html  enum.Less.html  index.html
(+3363 files in other folders)
