[package]

name = "differential-geometry"
version = "0.2.1"
authors = [ "Bartłomiej Kamiński <fizyk20@gmail.com>" ]
description = "A library for differential-geometric calculations"
license = "MIT"
repository = "https://github.com/fizyk20/differential-geometry.git"

[lib]

name = "diffgeom"
crate-type = ["rlib", "dylib"]

[dependencies]
generic-array = "0.8.2"
